# Moreau-Yoshida

./: .gitignore  CMakeLists.txt  MoreaYoshida.py  README.md  requirements 3 12.txt  test_pipeline.py  подсобка.ipynb
Math/Noise/: SSIM_PSNR.py  russkoe_pole_experimentov.py  some_noizse.ipynb
Math/Noise/Moro functions/: LNorm.py  deadline26.ipynb  proxi.ipynb  proximalOperator.py
Math/diffures/: kofe.py
cpp/include/cpp_functions/: deadline0305_AD.cpp
cpp/include/matplotplusplus/: README.md
cpp/src/: Moreau.cpp
docs/Задачи по функциям/: Moreau.ipynb
internet example/: denoising.ipynb
output/: denoising_results.csv
output/Additional_1/: denoising_results.csv
output/Classic/: denoising_results.csv
output/Fingerprint/: denoising_results.csv
output/Test_By_Marianna/: denoising_results.csv
src/: eigen_examples.cpp  main.cpp
Документация/: Ключевые понятия.md
Задачи на чтение файлов/: Задание.txt
Задачи по функциям/: 1 practice for project.py  Functions James Denis 26-04-25.ipynb  Gradient.ipynb  Lp_норма_и_Total_variation.ipynb  Moreau.ipynb  deadline0305(1).cpp  deadline0305_AD.cpp  deadline2604_AD.ipynb  denoise_pipeline.py  math_funcs.ipynb
Файлы конспектов/: Конспект говна.md
Файлы конспектов/Денис/: Конспект.md
